# pit-predictive-analysis

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-random-useless-facts.ipynb
notebooks/api-exploration/: 1.0-useless-facts.ipynb
