[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lib"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["lib"]
include = ["pyproject.toml", "lib/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lib"]
force-sort-within-sections = true

